--- a/modules/ROOT/pages/source/payload-mode.adoc
+++ b/modules/ROOT/pages/source/payload-mode.adoc
@@ -6,7 +6,7 @@ The Kafka Source Connector for Neo4j supports two payload modes to control the f
 
 The `neo4j.payload-mode` configuration offers the following options:
 
-* **`EXTENDED` (Default)**: Provides a detailed structure for each property, supporting schema compatibility and consistency. This format is especially useful in cases where schema changes (such as type conversions) or temporal types are present, ensuring data consistency across changes.
+* **`EXTENDED` (Default)**: Provides a detailed structure for each property, supporting schema compatibility and consistency. This format is especially useful in cases where schema changes (such as property type changes) or temporal types are present, ensuring data consistency across changes.
 
 * **`COMPACT`**: Produces a simpler format that only includes the essential fields. This format is lighter and may be preferable when schema compatibility or complex data types are not required.
 
